<resources>
    <string name="app_name">WhereIsUser</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="button_location_settings">Location settings</string>
    <string name="button_save_track">Save Track</string>
    <string name="button_stop_track">Stop Track</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_api_key_map">"AIzaSyAeo26-Gbx-YUVe60sTLZqtuZPeM9lqbH0"</string>
    <string name="channel_new_messages_description">New location</string>
    <string name="channel_new_messages">User new Location</string>
    <string name="content_title">Title of Content</string>
    <string name="latitude_messages">Latitude = </string>
    <string name="longitude_messages">Longitude = </string>
    <string name="start_service">Service started after reboot"</string>
    <string name="user_location_DbTitle">userTitle</string>
    <string name="menu_map">Map</string>
    <string name="menu_history">History</string>
    <string name="menu_exit">Exit</string>
    <string name="finish_result_title">History of user track</string>
    <string name="title_id_track">IdTrack, </string>
    <string name="title_date">Date, </string>
    <string name="title_count_points">Count of points</string>
    <string name="title_button_clear">Delete all tracks</string>
    <string name="alert_dialog_title">Delete user tracks!</string>
    <string name="alert_dialog_message">Delete all tracks?</string>
    <string name="alert_dialog_positive_button_text">Ok</string>
    <string name="alert_dialog_negative_button_text">Cancel</string>
    <string name="check_location">check Location</string>
    <string name="title_activity_start_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>